k8s/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-container
        image: peingthepoder29/auth-service:latest
        ports:
        - containerPort: 3000
