k8s/prod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  selector:
    app: product
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30008
